Fix #20543 - [Feature] Add new GHS fields

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/ghsModel.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/ghsModel.properties
@@ -27,14 +27,21 @@ ghs_ghsmodel.type.ghs_personalProtection.title                = Personal protect
 ghs_ghsmodel.type.ghs_pictogram.title                         = Pictogram
 ghs_ghsmodel.type.ghs_precautionaryStatement.title            = Precautionary statement
 
-listconstraint.ghs_hazardTypes.Environmental     = Environmental
-listconstraint.ghs_hazardTypes.Health            = Health
-listconstraint.ghs_hazardTypes.Other             = Other
-listconstraint.ghs_hazardTypes.Physical          = Physical
-listconstraint.ghs_precautionaryTypes.Disposal   = Disposal
-listconstraint.ghs_precautionaryTypes.General    = General
-listconstraint.ghs_precautionaryTypes.Prevention = Prevention
-listconstraint.ghs_precautionaryTypes.Response   = Response
-listconstraint.ghs_precautionaryTypes.Storage    = Storage
-listconstraint.ghs_signalWords.Danger            = Danger
-listconstraint.ghs_signalWords.Warning           = Warning
+listconstraint.ghs_hazardTypes.Environmental           = Environmental
+listconstraint.ghs_hazardTypes.Health                  = Health
+listconstraint.ghs_hazardTypes.Other                   = Other
+listconstraint.ghs_hazardTypes.Physical                = Physical
+listconstraint.ghs_precautionaryTypes.Disposal         = Disposal
+listconstraint.ghs_precautionaryTypes.General          = General
+listconstraint.ghs_precautionaryTypes.Prevention       = Prevention
+listconstraint.ghs_precautionaryTypes.Response         = Response
+listconstraint.ghs_precautionaryTypes.Storage          = Storage
+listconstraint.ghs_sdsStandardCodes.ANSI               = ANSI
+listconstraint.ghs_sdsStandardCodes.FITPC              = Fiche Information Technique Produit Cosmetique - Cosmetic Product Technical Data Sheet
+listconstraint.ghs_sdsStandardCodes.GHS                = GHS
+listconstraint.ghs_sdsStandardCodes.OSHA               = OSHA
+listconstraint.ghs_sdsStandardCodes.OTHER              = Other
+listconstraint.ghs_sdsStandardCodes.REACH              = Reach regulation
+listconstraint.ghs_sdsStandardCodes.RETAILER_REQUESTED = Retailer Requested
+listconstraint.ghs_signalWords.Danger                  = Danger
+listconstraint.ghs_signalWords.Warning                 = Warning
