InProgress #21240 - [Feature] Added remaining fields

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms.properties
@@ -88,6 +88,7 @@ becpg.forms.help.gs1.packagingTypeCode                         = Indication of t
 becpg.forms.help.gs1.palletTypeCode                            = Indication of the type of pallet support used.
 becpg.forms.help.gs1.platformTermsAndConditionsCode            = Code indicating whether the medium is rented, exchangeable, consigned or lost.
 becpg.forms.help.gs1.preparationInstructions                   = Textual instruction on how to prepare the product before serving
+becpg.forms.help.gs1.priceComparisonContentTypeCode            = Code indicating how the comparative price (which is printed on shelf labels) is calculated.
 becpg.forms.help.gs1.productHierarchy3                         = Brick of the GPC (or Global Product Classification) classification to which the declared business unit relates.
 becpg.forms.help.gs1.productHierarchy4                         = Class of the IFLS classification to which the declared business unit relates.
 becpg.forms.help.gs1.promotionTypeCode                         = Used to identify the different types of free quantity promotional trade items and the nature of the link between the standard trade item and the promotional trade item.
@@ -142,6 +143,7 @@ becpg.forms.help.variantIds                                    = Select an item 
 becpg.forms.set.ac-info.label                                  = Corrective action
 becpg.forms.set.alcohol.label                                  = Alcohol information
 becpg.forms.set.allergens-claims.label                         = Allergens and label claims
+becpg.forms.set.animalFeeding.label                            = Animal feeding
 becpg.forms.set.assignees.label                                = Assignments
 becpg.forms.set.batch-info.label                               = Batch identification
 becpg.forms.set.brief-documents.label                          = Documents brief
