--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model.properties
@@ -1,4 +1,5 @@
 
+gs1_gs1Model.aspect.gs1_animalFeedingAspect.title                                         = Animal feeding aspect
 gs1_gs1Model.aspect.gs1_AssetAspect.description                                           = Applied to a node that has been published to GS1
 gs1_gs1Model.aspect.gs1_AssetAspect.title                                                 = GS1 Asset
 gs1_gs1Model.aspect.gs1_DeliveryChannelAspect.description                                 = Applied to a node that represents a GS1 delivery channel
@@ -34,6 +35,10 @@ gs1_gs1Model.association.gs1_targetMarketCountries.description                  
 gs1_gs1Model.association.gs1_targetMarketCountries.title                                  = Countries
 gs1_gs1Model.association.gs1_targetMarkets.description                                    = A set of target market for the product
 gs1_gs1Model.association.gs1_targetMarkets.title                                          = Target markets
+gs1_gs1Model.property.gs1_additionalTradeItemClassification1.title                        = Additional trade item classification
+gs1_gs1Model.property.gs1_additionalTradeItemClassification2.title                        = Additional trade item classification 2
+gs1_gs1Model.property.gs1_additionalTradeItemClassificationText1.title                    = Additional trade item classification description
+gs1_gs1Model.property.gs1_additionalTradeItemClassificationText2.title                    = Additional trade item classification description 2
 gs1_gs1Model.property.gs1_alcoholBeverageAge.description                                  = The time period which the alcohol product has been aged. For example, a whiskey aged 12 years
 gs1_gs1Model.property.gs1_alcoholBeverageAge.title                                        = Alcohol beverage age (M)
 gs1_gs1Model.property.gs1_alcoholBeverageDistilledFromCode.description                    = The main ingredient(s) from which the alcohol product has been distilled. Example: Rye, Potato, Sugar Cane.
@@ -56,6 +61,12 @@ gs1_gs1Model.property.gs1_alcoholicBeverageSugarContent.description             
 gs1_gs1Model.property.gs1_alcoholicBeverageSugarContent.title                             = Alcoholic beverage sugar content (g/L)
 gs1_gs1Model.property.gs1_alcoholicPermissionLevel.description                            = Indication of a permission level for alcoholic products dependent on the product classification. The permission level codes should reflect those of the target market.
 gs1_gs1Model.property.gs1_alcoholicPermissionLevel.title                                  = Alcoholic permission level
+gs1_gs1Model.property.gs1_animalFeedAdditiveStatement.title                               = Animal feeding additive statement
+gs1_gs1Model.property.gs1_animalFeedAnalyticalConstituentsStatement.title                 = Animal feeding analytical constituents statement
+gs1_gs1Model.property.gs1_animalFeedCompositionStatement.title                            = Animal feeding composition statement
+gs1_gs1Model.property.gs1_animalFeedingInstructions.title                                 = Animal feeding instructions
+gs1_gs1Model.property.gs1_animalFeedType.title                                            = Animal feeding type
+gs1_gs1Model.property.gs1_animalNutritionalClaim.title                                    = Animal nutritional claim
 gs1_gs1Model.property.gs1_beerStyleCode.description                                       = A value to provide a style name for beer products, such as Brown Porter, Imperial Stout, Witbier.
 gs1_gs1Model.property.gs1_beerStyleCode.title                                             = Beer style
 gs1_gs1Model.property.gs1_bitternessOfBeerMeasurement.description                         = Indicates the descriptive term that is used by the product manufacturer to identify the bitterness of beer, expressed in IBU.
@@ -69,6 +80,7 @@ gs1_gs1Model.property.gs1_cheeseMaturationPeriodDescription.description         
 gs1_gs1Model.property.gs1_cheeseMaturationPeriodDescription.title                         = Cheese Maturation Period Description
 gs1_gs1Model.property.gs1_cheeseMaturationProcessContainerTypeCode.description            = The type of container that the process of maturation cheese occurs in. The container directly influences the flavour of the cheese. The term maturation is also know in other markets as Aged.
 gs1_gs1Model.property.gs1_cheeseMaturationProcessContainerTypeCode.title                  = Cheese Maturation Process Container Type
+gs1_gs1Model.property.gs1_consumerUsageInstructions.title                                 = Consumer usage instructions
 gs1_gs1Model.property.gs1_containerMaterialCode.description                               = The material of the container used in a specific process for an alcohol product.
 gs1_gs1Model.property.gs1_containerMaterialCode.title                                     = Container material
 gs1_gs1Model.property.gs1_containerProcessTypeCode.description                            = The process which is undertaken in a specific container for an alcohol product. 
@@ -93,6 +105,8 @@ gs1_gs1Model.property.gs1_depth.title                                           
 gs1_gs1Model.property.gs1_descriptionShort.description                                    = Description short, i.e. the trade item's short, but possibly complete product description. The description short (ex Item name (long)) is used to uniquely identify the trade item with its characteristic features
 gs1_gs1Model.property.gs1_descriptionShort.title                                          = Description Short
 gs1_gs1Model.property.gs1_diameter.title                                                  = Diameter (mm)
+gs1_gs1Model.property.gs1_discontinuedDateTime.description                                = Communicates discontinuation of the launch of a trade item that was never and will never be manufactured, but may have been presented to buyers
+gs1_gs1Model.property.gs1_discontinuedDateTime.title                                      = Discontinued Date Time
 gs1_gs1Model.property.gs1_dutyFeeTaxAmount.title                                          = Tax amount
 gs1_gs1Model.property.gs1_dutyFeeTaxAmountUnit.title                                      = Unit
 gs1_gs1Model.property.gs1_dutyFeeTaxCategoryCode.title                                    = Type of tax
@@ -201,6 +215,7 @@ gs1_gs1Model.property.gs1_healthClaimDescription.title                          
 gs1_gs1Model.property.gs1_preparationType.title                                           = Preparation state of the product
 gs1_gs1Model.property.gs1_priceBasisQuantity.title                                        = Quantity
 gs1_gs1Model.property.gs1_priceBasisQuantityUnit.title                                    = Qty unit
+gs1_gs1Model.property.gs1_priceComparisonContentTypeCode.title                            = Price comparison type
 gs1_gs1Model.property.gs1_primaryAddedFlavouringCode.description                          = The flavouring which has been added to the alcohol product. This is the primary addition.
 gs1_gs1Model.property.gs1_primaryAddedFlavouringCode.title                                = Primary Added Flavouring
 gs1_gs1Model.property.gs1_productActivityTypeCode.description                             = A code list depicting the type of activity performed on an item.
