--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model.properties
@@ -14,6 +14,7 @@ aspect.bcpg_suppliersAspect              = Suppliers
 aspect.bcpg_undeletableAspect            = Undeletable aspect
 aspect.ghs_sdsAspect                     = Safety datasheet Aspect
 aspect.gs1_alcoholInformationAspect      = Alcohol information aspect
+aspect.gs1_animalFeedingAspect           = Animal feeding aspect
 aspect.gs1_cheeseInformationAspect       = Cheese aspect
 aspect.gs1_gs1Aspect                     = GS1 aspect
 aspect.gs1_innerPackAspect               = Inner pack aspect
