Fix #18751 - [Feature] Extract and display Ingredient regulatory data from Decernis

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/becpg-config-plm.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/becpg-config-plm.properties
@@ -91,6 +91,7 @@ beCPG.decernis.token=
 beCPG.decernis.companyName=
 beCPG.decernis.serverUrl=https://formula.decernis.com/api
 beCPG.decernis.analysisUrl=https://api.decernis.com/v5
+beCPG.decernis.ingredient.analysis.enabled=true
 
 #Glop
 beCPG.glop.serverUrl=http://becpg-glop/compute
