InProgress #22267 - [Feature] Add missing datalist descriptions

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/qualityModel.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/qualityModel.properties
@@ -135,6 +135,7 @@ qa_qamodel.property.qa_slTimePeriod.title                = Control time period
 qa_qamodel.property.qa_wlComment.title                   = Comment
 qa_qamodel.property.qa_wlState.title                     = State
 qa_qamodel.type.qa_batch.title                           = Process order
+qa_qamodel.type.qa_batchAllocationList.description       = List of product allocations
 qa_qamodel.type.qa_batchAllocationList.title             = Allocation
 qa_qamodel.type.qa_controlCharact.description            = Allows you to enter the characteristics to be checked
 qa_qamodel.type.qa_controlCharact.title                  = Characteristic to control
