Fix #18986 - [Feature] Add nut Mini/Maxi in OLAP

--- a/becpg-core/src/main/resources/alfresco/templates/webscripts/fr/becpg/olap/olapSchema_4_0.get.properties
+++ b/becpg-core/src/main/resources/alfresco/templates/webscripts/fr/becpg/olap/olapSchema_4_0.get.properties
@@ -169,6 +169,8 @@ jsolap.nutritionClass.title              = Nutrition class
 jsolap.nutritionScale.caption            = All nutrition scales
 jsolap.nutritionScale.title              = Nutrition scale
 jsolap.nutritionalFormulatedValues.title = Nutritional Formulated Values
+jsolap.nutritionalMaxi.title             = Maxi
+jsolap.nutritionalMini.title             = Mini
 jsolap.nutritionalValues.title           = Nutritional Values
 jsolap.origin.caption                    = All origins
 jsolap.origin.title                      = All origins
@@ -263,6 +265,8 @@ jsolap.state.title                       = State
 jsolap.statistics.title                  = Statistics
 jsolap.stepPerName.title                 = Etape par nom
 jsolap.stepsNumber.title                 = Steps number
+jsolap.storageConditions.caption         = All storage conditions
+jsolap.storageConditions.title           = Storage conditions
 jsolap.subFamily.title                   = Subfamily
 jsolap.subsidiary.caption                = All subsidiaries
 jsolap.subsidiary.title                  = Subsidiary
