Fix #22267 - [Feature] Added descriptions for all lists

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
@@ -530,7 +530,7 @@ bcpg_bcpgmodel.type.bcpg_dynamicCharactList.description                   = List
 bcpg_bcpgmodel.type.bcpg_dynamicCharactList.title                         = List of calculated characteristics
 bcpg_bcpgmodel.type.bcpg_finishedProduct.description                      = Finished product
 bcpg_bcpgmodel.type.bcpg_finishedProduct.title                            = Finished product
-bcpg_bcpgmodel.type.bcpg_forbiddenIngList.description                     = List of Forbidden ingredients
+bcpg_bcpgmodel.type.bcpg_forbiddenIngList.description                     = List of forbidden ingredients
 bcpg_bcpgmodel.type.bcpg_forbiddenIngList.title                           = Forbidden ingredients
 bcpg_bcpgmodel.type.bcpg_geoOrigin.description                            = Geographical origin of an ingredient (administration)
 bcpg_bcpgmodel.type.bcpg_geoOrigin.title                                  = Geographical origin
@@ -609,6 +609,7 @@ bcpg_bcpgmodel.type.bcpg_rawMaterial.description                          = Raw 
 bcpg_bcpgmodel.type.bcpg_rawMaterial.title                                = Raw material
 bcpg_bcpgmodel.type.bcpg_regulatoryList.description                       = Regulatory list
 bcpg_bcpgmodel.type.bcpg_regulatoryList.title                             = Regulatories
+bcpg_bcpgmodel.type.bcpg_regulatoryUsage.description                      = List of regulatory usages
 bcpg_bcpgmodel.type.bcpg_regulatoryUsage.title                            = Regulatory usage
 bcpg_bcpgmodel.type.bcpg_reqCtrlList.description                          = Lists of requirements
 bcpg_bcpgmodel.type.bcpg_reqCtrlList.title                                = Requirements
@@ -622,7 +623,7 @@ bcpg_bcpgmodel.type.bcpg_subsidiary.description                           = Subs
 bcpg_bcpgmodel.type.bcpg_subsidiary.title                                 = Subsidiary
 bcpg_bcpgmodel.type.bcpg_supplier.description                             = Supplier
 bcpg_bcpgmodel.type.bcpg_supplier.title                                   = Supplier
-bcpg_bcpgmodel.type.bcpg_svhcList.description                             = Substances of very hight concerns
+bcpg_bcpgmodel.type.bcpg_svhcList.description                             = Substances of very high concern
 bcpg_bcpgmodel.type.bcpg_svhcList.title                                   = Dangerous substances
 bcpg_bcpgmodel.type.bcpg_trademark.description                            = Trademark
 bcpg_bcpgmodel.type.bcpg_trademark.title                                  = Trademark
