--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/ghsModel.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/ghsModel.properties
@@ -22,9 +22,13 @@ ghs_ghsmodel.property.ghs_sdsSheetNumber.title                = SDS Number
 ghs_ghsmodel.property.ghs_sdsSignalWord.title                 = Signal Word
 ghs_ghsmodel.property.ghs_sdsStandardCode.title               = SDS standard
 ghs_ghsmodel.property.ghs_signalWord.title                    = Signal Word
+ghs_ghsmodel.type.ghs_hazardStatement.description             = List of hazard statements
 ghs_ghsmodel.type.ghs_hazardStatement.title                   = Hazard statement
+ghs_ghsmodel.type.ghs_personalProtection.description          = List of personal protections
 ghs_ghsmodel.type.ghs_personalProtection.title                = Personal protection
+ghs_ghsmodel.type.ghs_pictogram.description                   = List of pictograms
 ghs_ghsmodel.type.ghs_pictogram.title                         = Pictogram
+ghs_ghsmodel.type.ghs_precautionaryStatement.description      = List of precautionary statements
 ghs_ghsmodel.type.ghs_precautionaryStatement.title            = Precautionary statement
 
 listconstraint.ghs_hazardTypes.Environmental     = Environmental
