--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model.properties
@@ -305,6 +305,7 @@ gs1_gs1Model.property.gs1_vintner.description                                   
 gs1_gs1Model.property.gs1_vintner.title                                                   = Vintner
 gs1_gs1Model.property.gs1_weight.title                                                    = Gross weight (kg)
 gs1_gs1Model.property.gs1_width.title                                                     = Width (mm)
+gs1_gs1Model.type.gs1_alcoholBeverageContainer.description                                = List of alcohol beverage containers
 gs1_gs1Model.type.gs1_alcoholBeverageContainer.title                                      = Alcohol beverage container
 gs1_gs1Model.type.gs1_collectionPriceList.description                                     = List of sell prices (Collection)
 gs1_gs1Model.type.gs1_collectionPriceList.title                                           = Sell prices
