--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/packModel.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/packModel.properties
@@ -59,6 +59,7 @@ pack_packmodel.type.pack_label.description                     = Label displayed
 pack_packmodel.type.pack_label.title                           = Label
 pack_packmodel.type.pack_labelingList.description              = Specifications of the required mentions on a packaging
 pack_packmodel.type.pack_labelingList.title                    = Labels
+pack_packmodel.type.pack_labelingTemplate.description          = List of templates of labeling
 pack_packmodel.type.pack_labelingTemplate.title                = Template of labeling
 pack_packmodel.type.pack_packMaterial.description              = List of materials
 pack_packmodel.type.pack_packMaterial.title                    = Materials
