--- a/becpg-project/becpg-project-share/src/main/resources/alfresco/messages/becpg-project.properties
+++ b/becpg-project/becpg-project-share/src/main/resources/alfresco/messages/becpg-project.properties
@@ -50,6 +50,7 @@ becpg.forms.set.notification-email.label                   = Email
 becpg.forms.set.notification-filter.label                  = Filters
 becpg.forms.set.notification-recurring.label               = Recurring
 becpg.forms.set.notification-rule.label                    = Notification
+becpg.forms.set.notification-report.label				   = Report
 becpg.forms.set.planning.label                             = Planning
 becpg.forms.set.project.label                              = Project
 becpg.forms.set.reasign.label                              = Reassign to
