--- a/becpg-share/pom.xml
+++ b/becpg-share/pom.xml
@@ -6,7 +6,7 @@
 		<version>3.2.4</version>
 		<relativePath>../</relativePath>
 	</parent>
-    <version>3.2.4.23</version>
+    <version>3.2.4.24-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>
 	<artifactId>becpg-share</artifactId>
 	<packaging>jar</packaging>
@@ -79,8 +79,4 @@
             </plugin>
 		</plugins>
 	</build>
-
-  <scm>
-    <tag>3.2.4.23</tag>
-  </scm>
 </project>
