--- a/becpg-designer/becpg-designer-core/pom.xml
+++ b/becpg-designer/becpg-designer-core/pom.xml
@@ -6,7 +6,7 @@
 		<version>3.2.4</version>
 		<relativePath>../../</relativePath>
 	</parent>
-	<version>3.2.4.23-SNAPSHOT</version>
+	<version>3.2.4.23</version>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>becpg-designer-core</artifactId>
 	<packaging>jar</packaging>
@@ -63,4 +63,8 @@
             </plugin>
 		</plugins>
 	</build>
+
+  <scm>
+    <tag>3.2.4.23</tag>
+  </scm>
 </project>
