Fix #22267 - [Feature] Added "(administration)" to some descriptions + removed productListItem

--- a/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/model/projectModel.properties
+++ b/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/model/projectModel.properties
@@ -157,7 +157,7 @@ pjt_pjtmodel.type.pjt_resourceCost.description            = Costs of resource
 pjt_pjtmodel.type.pjt_resourceCost.title                  = Resource cost
 pjt_pjtmodel.type.pjt_scoreList.description               = Score list used to evaluate the project
 pjt_pjtmodel.type.pjt_scoreList.title                     = Score list
-pjt_pjtmodel.type.pjt_taskLegend.description              = Allows you to enter the task legend
+pjt_pjtmodel.type.pjt_taskLegend.description              = Allows you to enter the task legend (administration)
 pjt_pjtmodel.type.pjt_taskLegend.title                    = Task legend
 pjt_pjtmodel.type.pjt_taskList.description                = List of tasks
 pjt_pjtmodel.type.pjt_taskList.title                      = Tasks
