Fix #21401 - [Feature] Add evaporation rate in labeling

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model.properties
@@ -8,6 +8,7 @@ aspect.bcpg_meatAspect                   = Meat aspect
 aspect.bcpg_nutrientProfilingScoreAspect = Nutrient score profile
 aspect.bcpg_profitabilityAspect          = Product - profitability
 aspect.bcpg_reconstitutableAspect        = Reconstitutable
+aspect.bcpg_waterAspect = Evaporable
 aspect.bcpg_regulatoryAspect             = Regulatory aspect
 aspect.bcpg_regulatoryCodeAspect         = Regulatory code aspect
 aspect.bcpg_suppliersAspect              = Suppliers
