Fix #18331 - [Feature] add option excludePublishedEntities in channel query

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration.properties
@@ -18,7 +18,7 @@ beCPG.defaultSearchTemplate.type                               = string
 
 beCPG.remote.rateLimiter.capacity.description=Number of simultaneous requests allowed in the remote API.
 beCPG.remote.rateLimiter.capacity.type=Integer
-beCPG.remote.rateLimiter.refillRate.description=Rate at which the token bucket refills for the remote API rate limiter.
+beCPG.remote.rateLimiter.refillRate.description=Rate at which the token bucket refills for the remote API rate limiter (token/ms).
 beCPG.remote.rateLimiter.refillRate.type=Double
 
 
