--- a/becpg-core/pom.xml
+++ b/becpg-core/pom.xml
@@ -6,7 +6,7 @@
 		<version>23.2.0</version>
 		<relativePath>../</relativePath>
 	</parent>
-    <version>23.2.0.20</version>
+    <version>23.2.0.21-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>    
 	<artifactId>becpg-core</artifactId>
 	<packaging>jar</packaging>
@@ -115,6 +115,6 @@
 	</build>
 
   <scm>
-    <tag>23.2.0.20</tag>
+    <tag>23.2.0.19</tag>
   </scm>
 </project>
