Fix #22267 - [Feature] Added "(administration)" to material list and ing type

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/packModel.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/packModel.properties
@@ -61,7 +61,7 @@ pack_packmodel.type.pack_labelingList.description              = Specifications 
 pack_packmodel.type.pack_labelingList.title                    = Labels
 pack_packmodel.type.pack_labelingTemplate.description          = List of templates of labeling
 pack_packmodel.type.pack_labelingTemplate.title                = Template of labeling
-pack_packmodel.type.pack_packMaterial.description              = List of materials
+pack_packmodel.type.pack_packMaterial.description              = List of materials (administration)
 pack_packmodel.type.pack_packMaterial.title                    = Materials
 pack_packmodel.type.pack_packMaterialList.description          = List of packaging materials
 pack_packmodel.type.pack_packMaterialList.title                = Materials
