[Setup] Force SSL for mysql

--- a/becpg-integration-runner/src/main/docker/becpg-base-core/becpg/classes/alfresco-global.properties
+++ b/becpg-integration-runner/src/main/docker/becpg-base-core/becpg/classes/alfresco-global.properties
@@ -6,7 +6,7 @@
 # JDBC
 #
 db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://becpg-db:3306/db?autoReconnect=true&useUnicode=yes&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC&useServerPrepStmts=true&cachePrepStmts=true&dontCheckOnDuplicateKeyUpdateInSQL=true 
+db.url=jdbc:mysql://becpg-db:3306/db?autoReconnect=true&useUnicode=yes&characterEncoding=UTF-8&useSSL=true&equireSSL=true&serverTimezone=UTC&useServerPrepStmts=true&cachePrepStmts=true&dontCheckOnDuplicateKeyUpdateInSQL=true 
 db.username=becpg
 db.password=becpg
 
