Fix #21240 - [Feature] certificationCode field

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model.properties
@@ -76,6 +76,7 @@ gs1_gs1Model.property.gs1_cancelledDateTime.title                               
 gs1_gs1Model.property.gs1_catalogId.title                                                 = Identifier catalog
 gs1_gs1Model.property.gs1_catchAreaCode.title                                             = Catch area
 gs1_gs1Model.property.gs1_catchMethodCode.title                                           = Catch method
+gs1_gs1Model.property.gs1_certificationCode.title                                         = Certification code
 gs1_gs1Model.property.gs1_cheeseMaturationPeriodDescription.description                   = A descriptive way to specify a date range as some cheeses are matured over a period of time, but not an exact period. For example 3 to 4 weeks, over 1 year etc. The term maturation is also known in other markets as Aged.
 gs1_gs1Model.property.gs1_cheeseMaturationPeriodDescription.title                         = Cheese Maturation Period Description
 gs1_gs1Model.property.gs1_cheeseMaturationProcessContainerTypeCode.description            = The type of container that the process of maturation cheese occurs in. The container directly influences the flavour of the cheese. The term maturation is also know in other markets as Aged.
