Fix #21401 - [Feature] Add evaporation rate in labeling

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
@@ -41,8 +41,8 @@ bcpg_bcpgmodel.aspect.bcpg_svhcAspect.title                               = Subs
 bcpg_bcpgmodel.aspect.bcpg_transformationAspect.description               = Transformation aspect
 bcpg_bcpgmodel.aspect.bcpg_transformationAspect.title                     = Transformation aspect
 bcpg_bcpgmodel.aspect.bcpg_undeletableAspect.description                  = Undeletable aspect
-bcpg_bcpgmodel.aspect.bcpg_waterAspect.description                        = Evaporable aspect
-bcpg_bcpgmodel.aspect.bcpg_waterAspect.title                              = Evaporable aspect
+bcpg_bcpgmodel.aspect.bcpg_evaporableAspect.description                        = Evaporable aspect
+bcpg_bcpgmodel.aspect.bcpg_evaporableAspect.title                              = Evaporable aspect
 bcpg_bcpgmodel.association.bcpg_advAlInVolAnd.title                       = Allergens present involuntarily
 bcpg_bcpgmodel.association.bcpg_advAlInVolNot.title                       = Allergens not present involuntarily
 bcpg_bcpgmodel.association.bcpg_advAlVolAnd.title                         = Allergens present voluntarily
