--- a/becpg-core/pom.xml
+++ b/becpg-core/pom.xml
@@ -6,7 +6,7 @@
 		<version>4.2.3</version>
 		<relativePath>../</relativePath>
 	</parent>
-    <version>4.2.3.76-SNAPSHOT</version>
+    <version>4.2.3.76</version>
     <modelVersion>4.0.0</modelVersion>    
 	<artifactId>becpg-core</artifactId>
 	<packaging>jar</packaging>
@@ -115,4 +115,8 @@
 			</plugin>
 		</plugins>
 	</build>
+
+  <scm>
+    <tag>4.2.3.76</tag>
+  </scm>
 </project>
