--- a/becpg-project/becpg-project-core/pom.xml
+++ b/becpg-project/becpg-project-core/pom.xml
@@ -6,7 +6,7 @@
 		<version>3.2.4</version>
 		<relativePath>../../</relativePath>
 	</parent>
-    <version>3.2.4.25</version>
+    <version>3.2.4.26-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>    
 	<artifactId>becpg-project-core</artifactId>
 	<packaging>jar</packaging>
@@ -57,8 +57,4 @@
             </plugin>
 		</plugins>
 	</build>
-
-  <scm>
-    <tag>3.2.4.25</tag>
-  </scm>
 </project>
