[Setup] Disable becpg-bus broker

--- a/becpg-integration-runner/src/main/docker/becpg-base-core/becpg/classes/alfresco-global.properties
+++ b/becpg-integration-runner/src/main/docker/becpg-base-core/becpg/classes/alfresco-global.properties
@@ -33,6 +33,8 @@ localTransform.core-aio.url=http://alfresco-transform-core-aio:8090
 
 # Broker url
 repo.event2.enabled=false
+events.subsystem.autoStart=false
+messaging.subsystem.autoStart=false
 messaging.broker.url=failover:(nio://becpg-bus:61616)?timeout=3000&jms.useCompression=true
 
 #Heartbeat
