Fix #15790 - [Feature] Improve license management

--- a/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/console/becpg-admin.get.properties
+++ b/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/console/becpg-admin.get.properties
@@ -6,32 +6,38 @@ button.reload-model  = Reload
 button.show-batches  = Show
 button.show-users    = Show
 
-label.batchCounts         = Ongoing tasks:
-label.becpgSchema         = beCPG Schema:
-label.characts            = System characteristics
-label.characts.edit       = Edit:
-label.connectedUsers      = Connected users:
-label.diskPerc            = Disk (%):
-label.empty-cache         = beCPG caches
-label.freeMemory          = Free memory:
-label.informations        = System information
-label.init-repo           = Initialize the repository by creating system folders, hierarchy folders and rules
-label.maxMemory           = Max memory:
-label.memory              = Memory
-label.nonHeapMemory       = Non Heap Memory:
-label.reload-config       = Reload the share config (forms)
-label.reload-model        = Reload the model (types, properties, constraints,...)
+label.actions                 = Actions
+label.batchCounts             = Ongoing tasks:
+label.becpgSchema             = beCPG Schema:
+label.characts                = System characteristics
+label.characts.edit           = Edit:
+label.concurrentReadUsers     = Floating licenses in consultation:
+label.concurrentSupplierUsers = Floating licenses supplier:
+label.concurrentWriteUsers    = Floating licenses in edition:
+label.connectedUsers          = Connected users:
+label.diskPerc                = Disk (%):
+label.empty-cache             = beCPG caches
+label.freeMemory              = Free memory:
+label.informations            = System information
+label.init-repo               = Initialize the repository by creating system folders, hierarchy folders and rules
+label.maxMemory               = Max memory:
+label.memory                  = Memory
+label.namedReadUsers          = Named licenses in consultation:
+label.namedWriteUsers         = Named licenses in edition:
+label.nonHeapMemory           = Non Heap Memory:
+label.reload-config           = Reload the share config (forms)
+label.reload-model            = Reload the model (types, properties, constraints,...)
 #Form labels
-label.repository          = Repository
-label.show-batches        = ongoing tasks
-label.show-users          = connected users
-label.systemFolder.access = Access to:
-label.systemFolders       = System folders
-label.task.current        = Current task:
-label.task.pending        = Pending tasks:
-label.title-form          = beCPG admin console
-label.totalMemory         = Total memory:
-label.withoutLicenseUsers = Users without licenses
+label.repository              = Repository
+label.show-batches            = ongoing tasks
+label.show-users              = connected users
+label.systemFolder.access     = Access to:
+label.systemFolders           = System folders
+label.task.current            = Current task:
+label.task.pending            = Pending tasks:
+label.title-form              = beCPG admin console
+label.totalMemory             = Total memory:
+label.withoutLicenseUsers     = Users without licenses
 
 message.batch.cancel          = Cancel the task
 message.empty-cache.failure   = Failed to clear cache
