--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model.properties
@@ -35,10 +35,10 @@ gs1_gs1Model.association.gs1_targetMarketCountries.description                  
 gs1_gs1Model.association.gs1_targetMarketCountries.title                                  = Countries
 gs1_gs1Model.association.gs1_targetMarkets.description                                    = A set of target market for the product
 gs1_gs1Model.association.gs1_targetMarkets.title                                          = Target markets
-gs1_gs1Model.property.gs1_additionalTradeItemClassification1.title                        = Additional trade item classification
-gs1_gs1Model.property.gs1_additionalTradeItemClassification2.title                        = Additional trade item classification 2
-gs1_gs1Model.property.gs1_additionalTradeItemClassificationText1.title                    = Additional trade item classification description
-gs1_gs1Model.property.gs1_additionalTradeItemClassificationText2.title                    = Additional trade item classification description 2
+gs1_gs1Model.property.gs1_additionalTradeItemClassification1.title                        = Trade item classification
+gs1_gs1Model.property.gs1_additionalTradeItemClassification2.title                        = Trade item classification 2
+gs1_gs1Model.property.gs1_additionalTradeItemClassificationText1.title                    = Trade item classification description
+gs1_gs1Model.property.gs1_additionalTradeItemClassificationText2.title                    = Trade item classification description 2
 gs1_gs1Model.property.gs1_alcoholBeverageAge.description                                  = The time period which the alcohol product has been aged. For example, a whiskey aged 12 years
 gs1_gs1Model.property.gs1_alcoholBeverageAge.title                                        = Alcohol beverage age (M)
 gs1_gs1Model.property.gs1_alcoholBeverageDistilledFromCode.description                    = The main ingredient(s) from which the alcohol product has been distilled. Example: Rye, Potato, Sugar Cane.
@@ -61,9 +61,9 @@ gs1_gs1Model.property.gs1_alcoholicBeverageSugarContent.description             
 gs1_gs1Model.property.gs1_alcoholicBeverageSugarContent.title                             = Alcoholic beverage sugar content (g/L)
 gs1_gs1Model.property.gs1_alcoholicPermissionLevel.description                            = Indication of a permission level for alcoholic products dependent on the product classification. The permission level codes should reflect those of the target market.
 gs1_gs1Model.property.gs1_alcoholicPermissionLevel.title                                  = Alcoholic permission level
-gs1_gs1Model.property.gs1_animalFeedAdditiveStatement.title                               = Animal feeding additive statement
-gs1_gs1Model.property.gs1_animalFeedAnalyticalConstituentsStatement.title                 = Animal feeding analytical constituents statement
-gs1_gs1Model.property.gs1_animalFeedCompositionStatement.title                            = Animal feeding composition statement
+gs1_gs1Model.property.gs1_animalFeedAdditiveStatement.title                               = Animal feeding additive
+gs1_gs1Model.property.gs1_animalFeedAnalyticalConstituentsStatement.title                 = Animal feeding analytical constituents
+gs1_gs1Model.property.gs1_animalFeedCompositionStatement.title                            = Animal feeding composition
 gs1_gs1Model.property.gs1_animalFeedingInstructions.title                                 = Animal feeding instructions
 gs1_gs1Model.property.gs1_animalFeedType.title                                            = Animal feeding type
 gs1_gs1Model.property.gs1_animalNutritionalClaim.title                                    = Animal nutritional claim
