Fix #22345 - [Feature] Add clean config button

--- a/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/console/becpg-admin.get.properties
+++ b/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/console/becpg-admin.get.properties
@@ -1,15 +1,16 @@
 
-button.empty-cache   = Purge
-button.init-repo     = Initialize
-button.reload-config = Reload
-button.reload-model  = Reload
-button.show-batches  = Show
-button.show-users    = Show
+button.clean-config = Clean
+button.empty-cache  = Purge
+button.init-repo    = Initialize
+button.reload-model = Reload
+button.show-batches = Show
+button.show-users   = Show
 
 label.batchCounts         = Ongoing tasks:
 label.becpgSchema         = beCPG Schema:
 label.characts            = System characteristics
 label.characts.edit       = Edit:
+label.clean-config        = Clean the share config (forms)
 label.connectedUsers      = Connected users:
 label.diskPerc            = Disk (%):
 label.empty-cache         = beCPG caches
@@ -19,7 +20,6 @@ label.init-repo           = Initialize the repository by creating system folders
 label.maxMemory           = Max memory:
 label.memory              = Memory
 label.nonHeapMemory       = Non Heap Memory:
-label.reload-config       = Reload the share config (forms)
 label.reload-model        = Reload the model (types, properties, constraints,...)
 #Form labels
 label.repository          = Repository
@@ -33,15 +33,15 @@ label.title-form          = beCPG admin console
 label.totalMemory         = Total memory:
 label.withoutLicenseUsers = Users without licenses
 
-message.batch.cancel          = Cancel the task
-message.empty-cache.failure   = Failed to clear cache
-message.empty-cache.success   = All beCPG caches cleared
-message.init-repo.failure     = Failed to initialize repository
-message.init-repo.success     = Repository initialized
-message.reload-config.failure = Failed to reload the config
-message.reload-config.success = Config reloaded
-message.reload-model.failure  = Failed to reload the model
+message.batch.cancel         = Cancel the task
+message.clean-config.failure = Failed to clean the config
+message.clean-config.success = Config cleaned
+message.empty-cache.failure  = Failed to clear cache
+message.empty-cache.success  = All beCPG caches cleared
+message.init-repo.failure    = Failed to initialize repository
+message.init-repo.success    = Repository initialized
+message.reload-model.failure = Failed to reload the model
 #Confirmation messages
-message.reload-model.success  = Model reloaded
-message.sortasc               = Click to sort ascending
-message.sortdesc              = Click to sort descending
+message.reload-model.success = Model reloaded
+message.sortasc              = Click to sort ascending
+message.sortdesc             = Click to sort descending
