Fix #17824 - [Feature] Add activity list to characts, list values and quality entities

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths.properties
@@ -1,4 +1,5 @@
 
+path.activitylist                        = Activities
 path.aging                               = Aging
 path.alcoholbeveragecontainers           = Alcohol beverage containers
 path.allergens                           = Allergens
