--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm.properties
@@ -224,6 +224,9 @@ nutriscore.message.missingCharacts  = Wrong Nutrient score calculation because o
 plm.ecm.apply.version.label                             = Applied by ECO {0}
 plm.ecm.automatic.name                                  = Automatic ECO {0,date,MM-dd-yyyy HH'h'mm}
 plm.ecm.current.name                                    = {0,date,MM-dd-yyyy HH'h'mm}
+plm.project.archive.deliverable.name                    = Archiving deliverable
+plm.project.archive.task.name                           = Archiving task
+plm.project.archive.tpl.name                            = Archiving project
 plm.script.start-validation-workflow.js.message         = [Validation] - {0}
 plm.script.start-validation-workflow.js.title           = Validation
 plm.site.archived.title                                 = Archived product
