--- a/becpg-designer/becpg-designer-core/pom.xml
+++ b/becpg-designer/becpg-designer-core/pom.xml
@@ -6,7 +6,7 @@
 		<version>4.2.3</version>
 		<relativePath>../../</relativePath>
 	</parent>
-    <version>4.2.3.78</version>	
+    <version>4.2.3.79-SNAPSHOT</version>	
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>becpg-designer-core</artifactId>
 	<packaging>jar</packaging>
@@ -64,8 +64,4 @@
             </plugin>
 		</plugins>
 	</build>
-
-  <scm>
-    <tag>4.2.3.78</tag>
-  </scm>
 </project>
