--- a/becpg-designer/becpg-designer-share/pom.xml
+++ b/becpg-designer/becpg-designer-share/pom.xml
@@ -6,7 +6,7 @@
 		<version>4.2.0</version>
 		<relativePath>../../</relativePath>
 	</parent>
-    <version>4.2.0.5-SNAPSHOT</version>
+    <version>4.2.0.5</version>
     <modelVersion>4.0.0</modelVersion>    
 	<artifactId>becpg-designer-share</artifactId>
 	<packaging>jar</packaging>
@@ -60,4 +60,8 @@
 		</dependency>
 
 	</dependencies>
+
+  <scm>
+    <tag>4.2.0.5</tag>
+  </scm>
 </project>
