Fix #19917 - [Feature] Created new logisticUnit type

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/becpg-messages.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/becpg-messages.properties
@@ -5,6 +5,7 @@ autonum.prefix.controlPlan.code              = CP
 autonum.prefix.finishedProduct.code          = FP
 autonum.prefix.linkedValue.code              = LNK
 autonum.prefix.localSemiFinishedProduct.code = LSFP
+autonum.prefix.logisticUnit.code             = LU
 autonum.prefix.packagingKit.code             = PK
 autonum.prefix.packagingMaterial.code        = PM
 autonum.prefix.product.code                  = P
