--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-pages.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-pages.properties
@@ -24,6 +24,7 @@ menu.create-content.eco                      = Change order...
 menu.create-content.entity                   = Entity...
 menu.create-content.finishedProduct          = Finished product...
 menu.create-content.localSemiFinishedProduct = Semi-finished (local)...
+menu.create-content.logisticUnit			 = Logistic unit...
 menu.create-content.nc                       = Non conformity...
 menu.create-content.packagingKit             = Packaging kit...
 menu.create-content.packagingMaterial        = Packaging material...
