--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model.properties
@@ -151,6 +151,7 @@ type.bcpg_ing                      = Ingredient
 type.bcpg_labelClaim               = Claim
 type.bcpg_lca                      = LCA
 type.bcpg_localSemiFinishedProduct = Local semi finished
+type.bcpg_logisticUnit			   = Logistic unit
 type.bcpg_microBio                 = Microbiological characteristic
 type.bcpg_nut                      = Nutrient
 type.bcpg_organo                   = Sensory characteristic
