InProgress #21702 - [Feature] Split survey form into tabs

--- a/becpg-project/becpg-project-share/src/main/resources/alfresco/messages/becpg-project.properties
+++ b/becpg-project/becpg-project-share/src/main/resources/alfresco/messages/becpg-project.properties
@@ -61,6 +61,8 @@ becpg.forms.set.response-dateDesired.label                 = Date of response to
 becpg.forms.set.response-dateRealized.label                = Date of response to the client realized
 becpg.forms.set.sampling-date.label                        = Sampling date
 becpg.forms.set.subsidiary.label                           = Subsidiary
+becpg.forms.set.survey-autogeneration.label                = Autogeneration
+becpg.forms.set.survey-question.label                      = Question
 becpg.forms.set.tare.label                                 = Tare
 becpg.forms.set.template.label                             = Template
 becpg.forms.set.transmitter.label                          = Transmitter
