Fix #15456 - [Feature] Add ignoreEntityDataList in rules options

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/becpg-config-core.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/becpg-config-core.properties
@@ -100,3 +100,7 @@ beCPG.report.datasource.maxSizeInBytes=1048576
 #Solr backup
 beCPG.solr.alfresco.core=alfresco
 beCPG.solr.archive.core=archive
+
+#Policy
+beCPG.rule.policy.ignoreEntityDataList=true
+
